fixed scrollbar white space problem

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -33,7 +33,7 @@ section h3{
 section h1{
   margin: 30px 0 20px 0;
   font-family: 'Sansita Swashed', cursive;
-  font-size: 55px;
+  font-size: 35px;
   font-weight: 850;
   text-shadow: 2px 1px 5px black;
   text-transform: uppercase;
