--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,7 @@ nav .menu{
   justify-content: space-around;
 }
 
-nav .menu a{
-  width: 25%;
+nav .menu a{1  width: 25%;
   text-decoration: none;
   color: white;
   font-weight: bold;
@@ -138,6 +137,12 @@ nav .menu a{
     font-size:10vw
   }
   .menu{
+    visibility: hidden;
+  }
+  #scrollbar{
+    visibility: hidden;
+  }
+  #progressbar{
     visibility: hidden;
   }
 }
